--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 attrs==23.2.0
 certifi==2024.2.2
+charset-normalizer==3.3.2
 evdev==1.7.0
 exceptiongroup==1.2.1
 h11==0.14.0
@@ -9,6 +10,7 @@ outcome==1.3.0.post0
 pynput==1.7.6
 PySocks==1.7.1
 python-xlib==0.33
+requests==2.31.0
 selenium==4.19.0
 six==1.16.0
 sniffio==1.3.1
